# localize

./: AGENTS.md  Cargo.toml  build.rs  index.html
docs/: CSS.md  TRANSLATE.md
src/: alloc.rs  bundle_css.rs  clean.rs  cli.rs  downloader.rs  extract_css.rs  main.rs  rewriter.rs  scanner.rs  towebp.rs  translate.rs  webp_encode.rs  zap.rs
tests/: e2e_check.rs  e2e_css.rs
